--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 # Example .gitignore files: https://github.com/github/gitignore
 /bower_components/
 /node_modules/
+/client/bower_components/
+/client/songs/
+/.bowerrc
