--- a/.bowerrc
+++ b/.bowerrc
@@ -1,4 +1,3 @@
 {
-  "directory": "client/bower_components",
-  "proxy": "http://www-proxy.us.oracle.com:80"
+  "directory": "client/bower_components"
 }
