--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-material": "latest",
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.15",
-    "angular-audio": "^1.7.2"
+    "angular-audio": "^1.7.2",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
